--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.19",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.29",
@@ -45,6 +46,7 @@
     "@graphql-codegen/cli": "5.0.0",
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
+    "@types/js-cookie": "^3.0.4",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
