--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-next": "npm run dev && npm run codegen",
+    "dev-next": "npm run codegen --watch & npm run dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -14,9 +14,12 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/urql-introspection": "^2.2.1",
     "@hookform/resolvers": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.10.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -32,6 +35,7 @@
     "next": "13.4.19",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.29",
+    "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -47,6 +51,7 @@
     "@graphql-codegen/client-preset": "4.1.0",
     "@graphql-codegen/introspection": "4.0.0",
     "@types/js-cookie": "^3.0.4",
+    "@types/ramda": "^0.29.4",
     "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
