--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
+    "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.10.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
@@ -28,6 +31,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "graphql": "^16.8.0",
@@ -35,9 +39,12 @@
     "next": "13.4.19",
     "npm-run-all": "^4.1.5",
     "postcss": "8.4.29",
+    "radix-ui": "^1.0.1",
     "ramda": "^0.29.0",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.46.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
