--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -42,6 +43,7 @@
     "radix-ui": "^1.0.1",
     "ramda": "^0.29.0",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-day-picker": "^8.8.2",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
